# mono

./: .dockerignore  .env.example  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc.mjs  ;  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.email  README.md  astro.config.mjs  base-prettier.config.mjs  docker-compose.yaml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sanity.cli.ts  sanity.config.ts  sanity.types.ts  schema.json  tailwind.config.ts  turbo.json  worker-configuration.d.ts  wrangler.toml
.claude/: settings.json
.github/: renovate.json
apps/api/: .env.example  Cargo.toml  package.json
apps/api/migrations/: 20250820122233_init.sql
apps/api/src/: config.rs  errors.rs  main.rs  openapi.rs  state.rs
apps/api/src/dto/: admin.rs  event.rs  image.rs  invitation.rs  mod.rs  product.rs  root.rs  user.rs
apps/api/src/extractors/: admin.rs  auth.rs  mod.rs  utils.rs
apps/api/src/handlers/: admin.rs  auth.rs  event.rs  health.rs  image.rs  mod.rs  products.rs  profile.rs  root.rs  status.rs  user.rs
apps/api/src/models/: auth.rs  claimed_credit.rs  contact_submission.rs  image.rs  invitation.rs  mod.rs  notification.rs  producer.rs  product.rs  session.rs  user.rs  users_group.rs
apps/api/src/providers/: feide.rs
apps/api/src/repositories/: claimed_credit.rs  contact_submission.rs  event.rs  group.rs  image.rs  invitation.rs  mod.rs  notification.rs  producer.rs  product.rs  product_product_type.rs  product_type.rs  session.rs  shift.rs  user.rs  user_shift.rs  users_group.rs
apps/api/src/services/: auth.rs  beer.rs  event.rs  image.rs  invitation.rs  mod.rs  product.rs  session.rs  shift.rs  status.rs  user.rs
programmerbar-api/: Cargo.toml  Dockerfile
programmerbar-cms/: package.json  prettier.config.mjs  sanity-typegen.json  sanity.cli.ts  sanity.config.ts  sanity.types.ts  schema.json
programmerbar-email/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  package.json  prettier.config.js
programmerbar-email-templates/: eslint.config.mjs  package.json  tsconfig.json
programmerbar-web/: .env.example  .gitignore  .npmrc  drizzle.config.ts  eslint.config.js  (+14 more)
(+875 files in other folders)
