[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
axum = { version = "0.8.4", features = ["tracing"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-private"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
oauth2 = "5.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.5"
cookie = "0.18.1"
